fix(011): address ibacher PR #2767 review — 41 fixes across analyzer controllers
Cross-cutting:
- Add AnalyzerControllerHelper (wrapResponse/wrapError/mapExceptionToResponse)
- HashMap → LinkedHashMap for predictable JSON key ordering
- Parameterized SLF4J logging, fix int overflow (1000L * 60L * 60L)

Bug fixes:
- Transactional bulk activation with ownership check (#18)
- Fix getAnalyzer null-vs-exception contract (#30)

AnalyzerErrorRestController:
- DAO-level filtering, global stats query, enum @RequestParam types
- Fix contradictory 200/success:false → 422

AnalyzerFieldMappingRestController:
- Standardized {status,data} envelope, cause-aware exception mapping
- 404 for unavailable services, 413 for oversized payloads

AnalyzerRestController:
- Protocol default "ASTM LIS2-A2" → "LIS2-A2" (entity + Liquibase)
- Remove duplicate DELETE endpoint, ENQ/ACK constants
- java.io.File → java.nio.file.Path, Path.resolve() over string concat
- Push-only analyzer query guard, equalsIgnoreCase protocol check
- Collected validations, improved Javadoc (*NIX serial, getDefaultConfig)

Analyzer-defaults JSON (11 files):
- $schema URL, protocol as {name,version} object
- transport as typed array, transport_config keyed by transport

Move test-fluorocycler-simulator.sh → analyzer-harness/scripts/

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>