@@ -7,8 +7,11 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.Socket;
 import java.net.SocketTimeoutException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -62,6 +65,12 @@ public class AnalyzerRestController extends BaseRestController {
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
+    /** ASTM LIS2-A2 Enquiry — initiates transmission. */
+    private static final byte ENQ = 0x05;
+
+    /** ASTM LIS2-A2 Acknowledge — positive response. */
+    private static final byte ACK = 0x06;
+
     /**
      * GET /rest/analyzer/analyzers Retrieve all analyzers with their configurations
      */
@@ -90,7 +99,7 @@ public class AnalyzerRestController extends BaseRestController {
                     }
                 }
 
-                // Apply unified status filter
+                // Apply lifecycle status filter (SETUP, ACTIVE, INACTIVE, DELETED)
                 if (status != null && !status.isEmpty()) {
                     if (analyzerStatus == null || !analyzerStatus.equalsIgnoreCase(status)) {
                         continue;
@@ -103,7 +112,7 @@ public class AnalyzerRestController extends BaseRestController {
             return ResponseEntity.ok(response);
         } catch (Exception e) {
             logger.error("Error retrieving analyzers", e);
-            Map<String, Object> error = new HashMap<>();
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ArrayList<>());
         }
@@ -116,39 +125,34 @@ public class AnalyzerRestController extends BaseRestController {
     public ResponseEntity<Map<String, Object>> createAnalyzer(@RequestBody AnalyzerForm form,
             HttpServletRequest request) {
         try {
-            // Manual validation for optional fields
-            if (form.getIpAddress() != null && !form.getIpAddress().matches("^(\\d{1,3}\\.){3}\\d{1,3}$")) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("error", "Invalid IPv4 address format");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
-            }
-            if (form.getIpAddress() != null && NetworkValidationUtil.isBlockedAddress(form.getIpAddress())) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("error", "Connection to this address is not permitted");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
-            }
-            if (form.getPort() != null && (form.getPort() < 1 || form.getPort() > 65535)) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("error", "Port must be between 1 and 65535");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
-            }
+            // Collect all validation errors instead of failing on the first one
+            List<String> validationErrors = new ArrayList<>();
             if (form.getName() == null || form.getName().trim().isEmpty()) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("error", "Analyzer name is required");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+                validationErrors.add("Analyzer name is required");
             }
             if (form.getAnalyzerType() == null || form.getAnalyzerType().trim().isEmpty()) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("error", "Analyzer type is required");
+                validationErrors.add("Analyzer type is required");
+            }
+            if (form.getIpAddress() != null && !form.getIpAddress().matches("^(\\d{1,3}\\.){3}\\d{1,3}$")) {
+                validationErrors.add("Invalid IPv4 address format");
+            }
+            if (form.getIpAddress() != null && NetworkValidationUtil.isBlockedAddress(form.getIpAddress())) {
+                validationErrors.add("Connection to this address is not permitted");
+            }
+            if (form.getPort() != null && (form.getPort() < 1 || form.getPort() > 65535)) {
+                validationErrors.add("Port must be between 1 and 65535");
+            }
+            if (!validationErrors.isEmpty()) {
+                Map<String, Object> error = AnalyzerControllerHelper.wrapError(String.join("; ", validationErrors));
+                error.put("validationErrors", validationErrors);
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
             // Check for duplicate name
             List<Analyzer> existingAnalyzers = analyzerService.getAll();
             for (Analyzer existing : existingAnalyzers) {
                 if (existing.getName().equalsIgnoreCase(form.getName())) {
-                    Map<String, Object> error = new HashMap<>();
-                    error.put("error", "Analyzer with name '" + form.getName() + "' already exists");
-                    return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+                    return ResponseEntity.status(HttpStatus.CONFLICT).body(AnalyzerControllerHelper
+                            .wrapError("Analyzer with name '" + form.getName() + "' already exists"));
                 }
             }
 
@@ -166,7 +170,8 @@ public class AnalyzerRestController extends BaseRestController {
                 throw new LIMSRuntimeException("Failed to retrieve created analyzer");
             }
 
-            // Create AnalyzerConfiguration with unified status
+            // Create AnalyzerConfiguration (tracks lifecycle: SETUP → ACTIVE → INACTIVE →
+            // DELETED)
             // Always create configuration to store status, even if IP/Port not provided
             try {
                 List<String> testUnitIds = form.getTestUnitIds() != null ? form.getTestUnitIds() : new ArrayList<>();
@@ -174,8 +179,7 @@ public class AnalyzerRestController extends BaseRestController {
                 config.setAnalyzer(createdAnalyzer);
                 config.setIpAddress(form.getIpAddress());
                 config.setPort(form.getPort());
-                config.setProtocolVersion(
-                        form.getProtocolVersion() != null ? form.getProtocolVersion() : "ASTM LIS2-A2");
+                config.setProtocolVersion(form.getProtocolVersion() != null ? form.getProtocolVersion() : "LIS2-A2");
                 config.setTestUnitIds(testUnitIds);
                 if (form.getIdentifierPattern() != null) {
                     config.setIdentifierPattern(form.getIdentifierPattern());
@@ -186,34 +190,31 @@ public class AnalyzerRestController extends BaseRestController {
                 if (form.getPreferGenericPlugin() != null) {
                     config.setPreferGenericPlugin(form.getPreferGenericPlugin());
                 }
-                // Set unified status (use form status or default to SETUP)
+                // Set status (use form status or default to SETUP)
                 String status = form.getStatus() != null ? form.getStatus() : "SETUP";
                 try {
                     config.setStatus(AnalyzerConfiguration.AnalyzerStatus.valueOf(status));
                 } catch (IllegalArgumentException e) {
-                    logger.warn("Invalid status value: " + status + ", defaulting to SETUP");
+                    logger.warn("Invalid status value: {}, defaulting to SETUP", status);
                     config.setStatus(AnalyzerConfiguration.AnalyzerStatus.SETUP);
                 }
                 config.setSysUserId(getSysUserId(request));
                 analyzerConfigurationService.insert(config);
             } catch (LIMSRuntimeException e) {
                 // If configuration creation fails, log but don't fail the analyzer creation
-                logger.warn("Failed to create analyzer configuration: " + e.getMessage());
+                logger.warn("Failed to create analyzer configuration: {}", e.getMessage());
                 // Continue - analyzer is created, configuration can be added later
             }
 
             Map<String, Object> response = analyzerToMap(createdAnalyzer);
             return ResponseEntity.status(HttpStatus.CREATED).body(response);
         } catch (LIMSRuntimeException e) {
-            logger.error("Error creating analyzer: " + e.getMessage(), e);
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+            logger.error("Error creating analyzer: {}", e.getMessage(), e);
+            return AnalyzerControllerHelper.mapExceptionToResponse(e);
         } catch (Exception e) {
             logger.error("Error creating analyzer", e);
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(AnalyzerControllerHelper.wrapError(e.getMessage()));
         }
     }
 
@@ -226,16 +227,16 @@ public class AnalyzerRestController extends BaseRestController {
         try {
             Analyzer analyzer = analyzerService.get(id);
             if (analyzer == null) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Analyzer not found: " + id);
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
             }
             Optional<AnalyzerConfiguration> configOpt = analyzerConfigurationService.getByAnalyzerId(id);
 
             if (!configOpt.isPresent()) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Analyzer configuration not found");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+                return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(error);
             }
 
             AnalyzerConfiguration config = configOpt.get();
@@ -247,7 +248,7 @@ public class AnalyzerRestController extends BaseRestController {
                 response = testHl7Connection(config);
             } else if (protocol != null && (protocol.toUpperCase().startsWith("ASTM")
                     || protocol.toUpperCase().contains("E1381") || protocol.toUpperCase().contains("LIS2"))) {
-                response = testAstmConnection(config);
+                response = testAstmTcpConnection(config);
             } else if (protocol != null && protocol.toUpperCase().contains("FILE")) {
                 response = testFileConfiguration(config, analyzer);
             } else if (protocol != null && protocol.toUpperCase().contains("RS232")) {
@@ -257,7 +258,7 @@ public class AnalyzerRestController extends BaseRestController {
                 if (config.getIpAddress() != null && config.getPort() != null) {
                     response = testTcpConnection(config.getIpAddress(), config.getPort());
                 } else {
-                    response = new HashMap<>();
+                    response = new LinkedHashMap<>();
                     response.put("success", false);
                     response.put("message", "Unknown protocol or missing connection details: " + protocol);
                 }
@@ -278,7 +279,7 @@ public class AnalyzerRestController extends BaseRestController {
             return ResponseEntity.ok(response);
         } catch (Exception e) {
             logger.error("Error testing connection", e);
-            Map<String, Object> error = new HashMap<>();
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         }
@@ -294,7 +295,7 @@ public class AnalyzerRestController extends BaseRestController {
                     .getFieldsByAnalyzerId(id);
             List<Map<String, Object>> response = new ArrayList<>();
             for (org.openelisglobal.analyzer.valueholder.AnalyzerField field : fields) {
-                Map<String, Object> fieldMap = new HashMap<>();
+                Map<String, Object> fieldMap = new LinkedHashMap<>();
                 fieldMap.put("id", field.getId());
                 fieldMap.put("fieldName", field.getFieldName());
                 fieldMap.put("astmRef", field.getAstmRef());
@@ -305,8 +306,8 @@ public class AnalyzerRestController extends BaseRestController {
             }
             return ResponseEntity.ok(response);
         } catch (Exception e) {
-            logger.error("Error retrieving fields for analyzer: " + id, e);
-            Map<String, Object> error = new HashMap<>();
+            logger.error("Error retrieving fields for analyzer: {}", id, e);
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ArrayList<>());
         }
@@ -319,15 +320,16 @@ public class AnalyzerRestController extends BaseRestController {
     public ResponseEntity<Map<String, Object>> getAnalyzer(@PathVariable String id) {
         try {
             Analyzer analyzer = analyzerService.get(id);
+            if (analyzer == null) {
+                Map<String, Object> error = new LinkedHashMap<>();
+                error.put("error", "Analyzer not found: " + id);
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+            }
             Map<String, Object> response = analyzerToMap(analyzer);
             return ResponseEntity.ok(response);
-        } catch (org.hibernate.ObjectNotFoundException e) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", "Analyzer not found: " + id);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
         } catch (Exception e) {
             logger.error("Error retrieving analyzer", e);
-            Map<String, Object> error = new HashMap<>();
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         }
@@ -342,24 +344,24 @@ public class AnalyzerRestController extends BaseRestController {
         try {
             Analyzer analyzer = analyzerService.get(id);
             if (analyzer == null) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Analyzer not found: " + id);
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
             }
 
             // Manual validation for optional fields
             if (form.getIpAddress() != null && !form.getIpAddress().matches("^(\\d{1,3}\\.){3}\\d{1,3}$")) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Invalid IPv4 address format");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
             if (form.getIpAddress() != null && NetworkValidationUtil.isBlockedAddress(form.getIpAddress())) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Connection to this address is not permitted");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
             if (form.getPort() != null && (form.getPort() < 1 || form.getPort() > 65535)) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Port must be between 1 and 65535");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
@@ -400,12 +402,12 @@ public class AnalyzerRestController extends BaseRestController {
                 if (form.getPreferGenericPlugin() != null) {
                     config.setPreferGenericPlugin(form.getPreferGenericPlugin());
                 }
-                // Update unified status if provided
+                // Update lifecycle status if provided (SETUP → ACTIVE → INACTIVE → DELETED)
                 if (form.getStatus() != null) {
                     try {
                         config.setStatus(AnalyzerConfiguration.AnalyzerStatus.valueOf(form.getStatus()));
                     } catch (IllegalArgumentException e) {
-                        logger.warn("Invalid status value: " + form.getStatus() + ", keeping existing status");
+                        logger.warn("Invalid status value: {}, keeping existing status", form.getStatus());
                     }
                 }
                 analyzerConfigurationService.update(config);
@@ -416,8 +418,7 @@ public class AnalyzerRestController extends BaseRestController {
                 config.setAnalyzer(analyzer);
                 config.setIpAddress(form.getIpAddress());
                 config.setPort(form.getPort());
-                config.setProtocolVersion(
-                        form.getProtocolVersion() != null ? form.getProtocolVersion() : "ASTM LIS2-A2");
+                config.setProtocolVersion(form.getProtocolVersion() != null ? form.getProtocolVersion() : "LIS2-A2");
                 config.setTestUnitIds(testUnitIds);
                 if (form.getIdentifierPattern() != null) {
                     config.setIdentifierPattern(form.getIdentifierPattern());
@@ -428,12 +429,12 @@ public class AnalyzerRestController extends BaseRestController {
                 if (form.getPreferGenericPlugin() != null) {
                     config.setPreferGenericPlugin(form.getPreferGenericPlugin());
                 }
-                // Set unified status
+                // Set status
                 if (form.getStatus() != null) {
                     try {
                         config.setStatus(AnalyzerConfiguration.AnalyzerStatus.valueOf(form.getStatus()));
                     } catch (IllegalArgumentException e) {
-                        logger.warn("Invalid status value: " + form.getStatus() + ", defaulting to SETUP");
+                        logger.warn("Invalid status value: {}, defaulting to SETUP", form.getStatus());
                         config.setStatus(AnalyzerConfiguration.AnalyzerStatus.SETUP);
                     }
                 } else {
@@ -448,56 +449,17 @@ public class AnalyzerRestController extends BaseRestController {
             Map<String, Object> response = analyzerToMap(updatedAnalyzer);
             return ResponseEntity.ok(response);
         } catch (LIMSRuntimeException e) {
-            logger.error("Error updating analyzer: " + e.getMessage(), e);
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+            logger.error("Error updating analyzer: {}", e.getMessage(), e);
+            return AnalyzerControllerHelper.mapExceptionToResponse(e);
         } catch (Exception e) {
             logger.error("Error updating analyzer", e);
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(AnalyzerControllerHelper.wrapError(e.getMessage()));
         }
     }
 
     /**
-     * DELETE /rest/analyzer/analyzers/{id} Soft delete analyzer
-     * 
-     * Implements soft delete: sets status to INACTIVE (analyzer can be
-     * reactivated).
-     * 
-     * @param id Analyzer ID to delete
-     * @return 204 No Content on success, 404 if analyzer not found, 500 on error
-     */
-    @DeleteMapping("/analyzers/{id}")
-    public ResponseEntity<Void> softDeleteAnalyzer(@PathVariable String id) {
-        try {
-            Analyzer analyzer = analyzerService.get(id);
-            if (analyzer == null) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-            }
-
-            // Soft delete: set status to INACTIVE
-            Optional<AnalyzerConfiguration> configOpt = analyzerConfigurationService.getByAnalyzerId(id);
-            if (configOpt.isPresent()) {
-                AnalyzerConfiguration config = configOpt.get();
-                config.setStatus(AnalyzerConfiguration.AnalyzerStatus.INACTIVE);
-                analyzerConfigurationService.update(config);
-            }
-
-            // Also mark the analyzer as inactive
-            analyzer.setActive(false);
-            analyzerService.update(analyzer);
-
-            return ResponseEntity.noContent().build();
-        } catch (Exception e) {
-            logger.error("Error deleting analyzer: " + id, e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
-    }
-
-    /**
-     * POST /rest/analyzer/analyzers/{id}/delete Delete analyzer (legacy endpoint)
+     * POST /rest/analyzer/analyzers/{id}/delete Delete analyzer
      * 
      * Implements 90-day soft delete window per spec requirement: - If analyzer has
      * recent results (within 90 days): soft delete (status = DELETED) - If analyzer
@@ -533,7 +495,7 @@ public class AnalyzerRestController extends BaseRestController {
                     analyzerConfigurationService.update(config);
                 }
 
-                Map<String, Object> response = new HashMap<>();
+                Map<String, Object> response = new LinkedHashMap<>();
                 response.put("message", "Analyzer soft-deleted (has recent results within 90-day window)");
                 response.put("deleted", false); // Soft delete, not hard delete
                 return ResponseEntity.ok(response);
@@ -544,7 +506,7 @@ public class AnalyzerRestController extends BaseRestController {
                 }
                 analyzerService.delete(analyzer);
 
-                Map<String, Object> response = new HashMap<>();
+                Map<String, Object> response = new LinkedHashMap<>();
                 response.put("message", "Analyzer permanently deleted");
                 response.put("deleted", true); // Hard delete
                 return ResponseEntity.ok(response);
@@ -553,7 +515,7 @@ public class AnalyzerRestController extends BaseRestController {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
         } catch (Exception e) {
             logger.error("Error deleting analyzer", e);
-            Map<String, Object> error = new HashMap<>();
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         }
@@ -563,7 +525,7 @@ public class AnalyzerRestController extends BaseRestController {
      * Convert Analyzer entity to Map for JSON response
      */
     private Map<String, Object> analyzerToMap(Analyzer analyzer) {
-        Map<String, Object> map = new HashMap<>();
+        Map<String, Object> map = new LinkedHashMap<>();
         map.put("id", analyzer.getId());
         map.put("name", analyzer.getName());
         map.put("type", analyzer.getType());
@@ -582,7 +544,7 @@ public class AnalyzerRestController extends BaseRestController {
                 map.put("identifierPattern", config.getIdentifierPattern());
                 map.put("genericPlugin", config.isGenericPlugin());
                 map.put("preferGenericPlugin", config.isPreferGenericPlugin());
-                // Include unified status (defaults to SETUP if not set)
+                // Include lifecycle status (SETUP → ACTIVE → INACTIVE → DELETED)
                 if (config.getStatus() != null) {
                     map.put("status", config.getStatus().toString());
                 } else {
@@ -594,8 +556,7 @@ public class AnalyzerRestController extends BaseRestController {
             }
         } catch (Exception e) {
             // Configuration not found or error - just don't include it in response
-            logger.debug(
-                    "Could not load analyzer configuration for analyzer " + analyzer.getId() + ": " + e.getMessage());
+            logger.debug("Could not load analyzer configuration for analyzer {}: {}", analyzer.getId(), e.getMessage());
             // Default status to SETUP if configuration cannot be loaded
             map.put("status", "SETUP");
         }
@@ -611,7 +572,7 @@ public class AnalyzerRestController extends BaseRestController {
      * @return Map with success status, message, and connection details
      */
     private Map<String, Object> testTcpConnection(String ipAddress, Integer port) {
-        Map<String, Object> response = new HashMap<>();
+        Map<String, Object> response = new LinkedHashMap<>();
         Socket socket = null;
 
         if (NetworkValidationUtil.isBlockedAddress(ipAddress)) {
@@ -625,10 +586,6 @@ public class AnalyzerRestController extends BaseRestController {
             socket = new Socket();
             socket.connect(new java.net.InetSocketAddress(ipAddress, port), 5000);
             socket.setSoTimeout(5000); // Read timeout
-
-            // ASTM LIS2-A2 Control Characters
-            byte ENQ = 0x05; // Enquiry - Start transmission
-            byte ACK = 0x06; // Acknowledge - Positive response
 
             // Send ENQ
             OutputStream out = socket.getOutputStream();
@@ -695,22 +652,22 @@ public class AnalyzerRestController extends BaseRestController {
      * @return Map with success status and message
      */
     private Map<String, Object> testHl7Connection(AnalyzerConfiguration config) {
-        Map<String, Object> response = new HashMap<>();
+        Map<String, Object> response = new LinkedHashMap<>();
         response.put("success", true);
         response.put("message", "HL7 analyzers are push-based; validate by sending an HL7 message to OpenELIS");
         return response;
     }
 
     /**
-     * Test ASTM analyzer connection ASTM requires ENQ/ACK handshake for connection
-     * validation
-     * 
+     * Test ASTM analyzer connection over TCP/IP. ASTM requires ENQ/ACK handshake
+     * for connection validation.
+     *
      * @param config Analyzer configuration with IP/port
      * @return Map with success status and message
      */
-    private Map<String, Object> testAstmConnection(AnalyzerConfiguration config) {
+    private Map<String, Object> testAstmTcpConnection(AnalyzerConfiguration config) {
         if (config.getIpAddress() == null || config.getPort() == null) {
-            Map<String, Object> response = new HashMap<>();
+            Map<String, Object> response = new LinkedHashMap<>();
             response.put("success", false);
             response.put("message", "ASTM configuration incomplete - missing IP address or port");
             return response;
@@ -731,7 +688,7 @@ public class AnalyzerRestController extends BaseRestController {
      * @return Map with success status and message
      */
     private Map<String, Object> testFileConfiguration(AnalyzerConfiguration config, Analyzer analyzer) {
-        Map<String, Object> response = new HashMap<>();
+        Map<String, Object> response = new LinkedHashMap<>();
 
         try {
             // Check if file import configuration exists
@@ -754,8 +711,8 @@ public class AnalyzerRestController extends BaseRestController {
             }
 
             // Verify directory exists
-            java.io.File directory = new java.io.File(importDir);
-            if (directory.exists() && directory.isDirectory() && directory.canRead()) {
+            Path directory = Path.of(importDir);
+            if (Files.exists(directory) && Files.isDirectory(directory) && Files.isReadable(directory)) {
                 response.put("success", true);
                 response.put("message", "File import directory accessible: " + importDir);
                 response.put("importDirectory", importDir);
@@ -776,14 +733,20 @@ public class AnalyzerRestController extends BaseRestController {
     }
 
     /**
-     * Test Serial analyzer configuration Verifies that the serial port
-     * configuration exists and port is accessible
-     * 
+     * Test serial analyzer configuration. Verifies that the serial port
+     * configuration exists and the device node is accessible.
+     *
+     * <p>
+     * <b>Platform note:</b> Serial port detection relies on *NIX device nodes (e.g.
+     * {@code /dev/ttyS0}, {@code /dev/ttyUSB0}). On Windows, detection would
+     * require javax.comm or jSerialComm; this method will always report the port as
+     * inaccessible on non-*NIX systems.
+     *
      * @param analyzerId Analyzer ID
      * @return Map with success status and message
      */
     private Map<String, Object> testSerialConfiguration(String analyzerId) {
-        Map<String, Object> response = new HashMap<>();
+        Map<String, Object> response = new LinkedHashMap<>();
 
         try {
             Optional<SerialPortConfiguration> serialConfigOpt = serialPortService
@@ -804,9 +767,8 @@ public class AnalyzerRestController extends BaseRestController {
                 return response;
             }
 
-            // Check if port exists (file descriptor check)
-            java.io.File portFile = new java.io.File(portName);
-            boolean portExists = portFile.exists();
+            // Check if port device node exists (*NIX only — see Javadoc)
+            boolean portExists = Files.exists(Path.of(portName));
 
             if (portExists) {
                 response.put("success", true);
@@ -840,16 +802,20 @@ public class AnalyzerRestController extends BaseRestController {
     public ResponseEntity<Map<String, Object>> queryAnalyzer(@PathVariable String id) {
         try {
             String jobId = analyzerQueryService.startQuery(id);
-            Map<String, Object> response = new HashMap<>();
+            Map<String, Object> response = new LinkedHashMap<>();
             response.put("jobId", jobId);
             response.put("analyzerId", id);
             response.put("status", "started");
             return ResponseEntity.status(HttpStatus.ACCEPTED).body(response);
+        } catch (LIMSRuntimeException e) {
+            // Push-only analyzers or missing TCP config → 422
+            logger.warn("Cannot query analyzer {}: {}", id, e.getMessage());
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY)
+                    .body(AnalyzerControllerHelper.wrapError(e.getMessage()));
         } catch (Exception e) {
-            logger.error("Error starting query job for analyzer: " + id, e);
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+            logger.error("Error starting query job for analyzer: {}", id, e);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(AnalyzerControllerHelper.wrapError(e.getMessage()));
         }
     }
 
@@ -861,14 +827,14 @@ public class AnalyzerRestController extends BaseRestController {
         try {
             Map<String, Object> status = analyzerQueryService.getStatus(id, jobId);
             if (status == null) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Query job not found or expired: " + jobId);
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
             }
             return ResponseEntity.ok(status);
         } catch (Exception e) {
-            logger.error("Error getting query status for analyzer: " + id + ", job: " + jobId, e);
-            Map<String, Object> error = new HashMap<>();
+            logger.error("Error getting query status for analyzer: {}, job: {}", id, jobId, e);
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         }
@@ -893,30 +859,30 @@ public class AnalyzerRestController extends BaseRestController {
                 defaultsDir = "/data/analyzer-defaults";
             }
 
-            java.io.File baseDir = new java.io.File(defaultsDir);
-            if (!baseDir.exists() || !baseDir.isDirectory()) {
-                logger.warn("Analyzer defaults directory not found: " + defaultsDir);
+            Path baseDir = Path.of(defaultsDir);
+            if (!Files.exists(baseDir) || !Files.isDirectory(baseDir)) {
+                logger.warn("Analyzer defaults directory not found: {}", defaultsDir);
                 return ResponseEntity.ok(new ArrayList<>());
             }
 
             List<Map<String, Object>> templates = new ArrayList<>();
 
             // Scan ASTM directory
-            java.io.File astmDir = new java.io.File(baseDir, "astm");
-            if (astmDir.exists() && astmDir.isDirectory()) {
+            Path astmDir = baseDir.resolve("astm");
+            if (Files.exists(astmDir) && Files.isDirectory(astmDir)) {
                 scanTemplates(astmDir, "astm", templates);
             }
 
             // Scan HL7 directory
-            java.io.File hl7Dir = new java.io.File(baseDir, "hl7");
-            if (hl7Dir.exists() && hl7Dir.isDirectory()) {
+            Path hl7Dir = baseDir.resolve("hl7");
+            if (Files.exists(hl7Dir) && Files.isDirectory(hl7Dir)) {
                 scanTemplates(hl7Dir, "hl7", templates);
             }
 
             return ResponseEntity.ok(templates);
         } catch (Exception e) {
             logger.error("Error listing default configs", e);
-            Map<String, Object> error = new HashMap<>();
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", "Failed to list default configurations: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         }
@@ -927,27 +893,28 @@ public class AnalyzerRestController extends BaseRestController {
      * configuration template from filesystem.
      *
      * <p>
-     * Implements strict security controls: - Protocol allowlist: only "astm" or
-     * "hl7" - Path sanitization: no "..", "/", or special characters in name -
-     * Canonical path verification: must be within defaults directory
-     *
-     * <p>
-     * Task Reference: T216 (M20) - Create REST endpoint for loading specific
-     * template
+     * Implements strict security controls:
+     * <ul>
+     * <li>Protocol allowlist: only "astm" or "hl7" (case-insensitive)</li>
+     * <li>Filename regex: {@code ^[a-zA-Z0-9\-_.]+$} — rejects path separators,
+     * {@code ..}, and special characters to prevent path traversal</li>
+     * <li>Normalized path verification: resolved path must start with the defaults
+     * base directory</li>
+     * </ul>
      */
     @GetMapping("/defaults/{protocol}/{name}")
     public ResponseEntity<?> getDefaultConfig(@PathVariable String protocol, @PathVariable String name) {
         try {
             // Validate protocol (allowlist)
-            if (!protocol.equals("astm") && !protocol.equals("hl7")) {
-                Map<String, Object> error = new HashMap<>();
+            if (!protocol.equalsIgnoreCase("astm") && !protocol.equalsIgnoreCase("hl7")) {
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Invalid protocol: must be 'astm' or 'hl7'");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
 
             // Sanitize filename: only alphanumeric, dash, underscore, period
             if (!name.matches("^[a-zA-Z0-9\\-_.]+$")) {
-                Map<String, Object> error = new HashMap<>();
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Invalid filename: only alphanumeric, dash, underscore, and period allowed");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
@@ -955,48 +922,45 @@ public class AnalyzerRestController extends BaseRestController {
             // Ensure .json extension
             String filename = name.endsWith(".json") ? name : name + ".json";
 
-            // Build path
+            // Build path using Path.resolve() (handles separators automatically)
             String defaultsDir = System.getenv("ANALYZER_DEFAULTS_DIR");
             if (defaultsDir == null || defaultsDir.isEmpty()) {
                 defaultsDir = "/data/analyzer-defaults";
             }
 
-            java.io.File baseDir = new java.io.File(defaultsDir);
-            java.io.File templateFile = new java.io.File(baseDir, protocol + "/" + filename);
+            Path baseDir = Path.of(defaultsDir);
+            Path templateFile = baseDir.resolve(protocol).resolve(filename);
 
-            // Verify canonical path (prevents path traversal)
-            String canonicalPath = templateFile.getCanonicalPath();
-            String baseDirCanonical = baseDir.getCanonicalPath();
-
-            if (!canonicalPath.startsWith(baseDirCanonical + java.io.File.separator)
-                    && !canonicalPath.equals(baseDirCanonical)) {
-                Map<String, Object> error = new HashMap<>();
+            // Verify normalized path stays within base directory (prevents path traversal)
+            Path normalizedPath = templateFile.normalize();
+            Path normalizedBase = baseDir.normalize();
+            if (!normalizedPath.startsWith(normalizedBase)) {
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Invalid path: template must be within defaults directory");
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
             }
 
             // Check file exists
-            if (!templateFile.exists() || !templateFile.isFile()) {
-                Map<String, Object> error = new HashMap<>();
+            if (!Files.exists(templateFile) || !Files.isRegularFile(templateFile)) {
+                Map<String, Object> error = new LinkedHashMap<>();
                 error.put("error", "Template not found: " + protocol + "/" + name);
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
             }
 
             // Read and parse JSON
-            String jsonContent = new String(java.nio.file.Files.readAllBytes(templateFile.toPath()),
-                    java.nio.charset.StandardCharsets.UTF_8);
+            String jsonContent = Files.readString(templateFile, StandardCharsets.UTF_8);
 
             Map<String, Object> config = objectMapper.readValue(jsonContent, Map.class);
             return ResponseEntity.ok(config);
 
         } catch (IOException e) {
-            logger.error("Error reading default config: " + protocol + "/" + name, e);
-            Map<String, Object> error = new HashMap<>();
+            logger.error("Error reading default config: {}/{}", protocol, name, e);
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", "Failed to read template: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         } catch (Exception e) {
             logger.error("Error loading default config", e);
-            Map<String, Object> error = new HashMap<>();
+            Map<String, Object> error = new LinkedHashMap<>();
             error.put("error", "Failed to load template: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
         }
@@ -1009,32 +973,28 @@ public class AnalyzerRestController extends BaseRestController {
      * @param protocol  Protocol name ("astm" or "hl7")
      * @param templates List to populate with template metadata
      */
-    private void scanTemplates(java.io.File directory, String protocol, List<Map<String, Object>> templates) {
-        java.io.File[] files = directory.listFiles((dir, name) -> name.endsWith(".json"));
-        if (files == null) {
-            return;
-        }
+    private void scanTemplates(Path directory, String protocol, List<Map<String, Object>> templates) {
+        try (java.util.stream.Stream<Path> paths = Files.list(directory)) {
+            paths.filter(p -> p.toString().endsWith(".json")).forEach(file -> {
+                try {
+                    String jsonContent = Files.readString(file, StandardCharsets.UTF_8);
+                    Map<String, Object> config = objectMapper.readValue(jsonContent, Map.class);
 
-        for (java.io.File file : files) {
-            try {
-                // Read JSON to extract analyzer_name
-                String jsonContent = new String(java.nio.file.Files.readAllBytes(file.toPath()),
-                        java.nio.charset.StandardCharsets.UTF_8);
-                Map<String, Object> config = objectMapper.readValue(jsonContent, Map.class);
+                    Map<String, Object> template = new LinkedHashMap<>();
+                    String filename = file.getFileName().toString().replace(".json", "");
+                    template.put("id", protocol + "/" + filename);
+                    template.put("protocol", protocol.toUpperCase());
+                    template.put("analyzerName", config.get("analyzer_name"));
+                    template.put("manufacturer", config.get("manufacturer"));
+                    template.put("category", config.get("category"));
 
-                Map<String, Object> template = new HashMap<>();
-                String filename = file.getName().replace(".json", "");
-                template.put("id", protocol + "/" + filename);
-                template.put("protocol", protocol.toUpperCase());
-                template.put("analyzerName", config.get("analyzer_name"));
-                template.put("manufacturer", config.get("manufacturer"));
-                template.put("category", config.get("category"));
-
-                templates.add(template);
-            } catch (Exception e) {
-                logger.warn("Failed to parse template file: " + file.getName(), e);
-                // Skip invalid files, continue with others
-            }
+                    templates.add(template);
+                } catch (Exception e) {
+                    logger.warn("Failed to parse template file: {}", file.getFileName(), e);
+                }
+            });
+        } catch (IOException e) {
+            logger.warn("Failed to list template files in {}: {}", directory, e.getMessage());
         }
     }
 }
